# identify

./: README.md
Identify/: CMakeLists.txt  test.cpp
Identify/include/: blue.h  green.h  red.h  rgb.h
Identify/src/: blue.cpp  green.cpp  red.cpp  rgb.cpp
